--- a/last_hour.qmd
+++ b/last_hour.qmd
@@ -3,7 +3,7 @@ title: "Last Hour Observations"
 execute:
   echo: false
 ---
-## Last Hour Observations (confidence > 0.75)
+## Last Hour Observations
 
 ```{python}
 import pandas as pd
