--- a/day_summary.qmd
+++ b/day_summary.qmd
@@ -6,6 +6,7 @@ title: "Summary of the Day"
 ```{python}
 import pandas as pd
 from datetime import datetime, timedelta
+import matplotlib.pyplot as plt
 
 CSV_PATH = "data/output.csv"
 df = pd.read_csv(CSV_PATH)
@@ -37,7 +38,7 @@ if len(filtered) > 0:
 
     print(filtered)
 
-    stats = last_day_week.groupby(last_day_week['timestamp'].dt.hour).size()
+    stats = df_last_week.groupby(df_last_week['timestamp'].dt.hour).size()
 
     stats.plot(kind='bar', legend=False)
     plt.xlabel("Hour of Day")
