--- a/week_summary.qmd
+++ b/week_summary.qmd
@@ -7,6 +7,7 @@ title: "Week Summary"
 ```{python}
 import pandas as pd
 from datetime import datetime, timedelta
+import matplotlib.pyplot as plt
 
 CSV_PATH = "data/output.csv"
 df = pd.read_csv(CSV_PATH)
