Update with weekly plot

--- a/week_summary.qmd
+++ b/week_summary.qmd
@@ -46,6 +46,17 @@ if len(filtered) > 0:
     plt.ylabel("Observations")
     plt.title("Observations per Hour (Last 7 days)")
     plt.show()
+
+    print(filtered)
+
+    stats = df_last_week.groupby(df_last_week['timestamp'].dt.day).size()
+
+    stats.plot(kind='bar', legend=False)
+    plt.xlabel("Day")
+    plt.ylabel("Observations")
+    plt.title("Observations per day (Last 7 days)")
+    plt.show()
+
 else:
     print("No observations in the last week")
 
