--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,9 @@
 ---
 title: "BirdNET Homepage"
+execute:
+  echo: false
 ---
-
- 
- ```{python}
+```{python}
 import pandas as pd
 from datetime import datetime, timedelta
 
