--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,8 @@ df_last_hour = df[df['start'] >= one_hour_ago]
 df_last_hour = df_last_hour[df_last_hour['confidence'] > 0.75]
 
 if len(df_last_hour) >0:
-    print(df_last_hour)
+    for _, row in df_last_hour.iterrows():
+        print(f"{row['start']} — {row['species']} (confidence: {row['confidence']:.2f})")
 else:
     print("No observations in the last hour")
 ```
