--- a/day_summary.qmd
+++ b/day_summary.qmd
@@ -40,8 +40,11 @@ if len(filtered) > 0:
     print(filtered)
 
     stats = df_last_week.groupby(df_last_week['timestamp'].dt.hour).size()
+    filtered_stats = (
+        filtered_stats
+        .reindex(range(24), fill_value=0))
 
-    stats.plot(kind='bar', legend=False)
+    filtered_stats.plot(kind='bar', legend=False)
     plt.xlabel("Hour of Day")
     plt.ylabel("Observations")
     plt.title("Observations per Hour (Last day)")
