--- a/last_hour.qmd
+++ b/last_hour.qmd
@@ -39,11 +39,14 @@ if len(result) > 0:
     print(result)
 
     stats = df_last_hour.groupby(df_last_hour['timestamp'].dt.minute).size()
+    filtered_stats = (
+        filtered_stats
+        .reindex(range(60), fill_value=0))
 
-    stats.plot(kind='bar', legend=False)
+    filtered_stats.plot(kind='bar', legend=False)
     plt.xlabel("Hour of Day")
     plt.ylabel("Observations")
-    plt.title("Observations per Hour (Last hour)")
+    plt.title("Observations per Minute (Last hour)")
     plt.show()
 else:
     print("No observations in the last hour")
