--- a/last_hour.qmd
+++ b/last_hour.qmd
@@ -39,11 +39,11 @@ if len(result) > 0:
     print(result)
 
     stats = df_last_hour.groupby(df_last_hour['timestamp'].dt.minute).size()
-    filtered_stats = (
-        filtered_stats
+    stats = (
+        stats
         .reindex(range(60), fill_value=0))
 
-    filtered_stats.plot(kind='bar', legend=False)
+    stats.plot(kind='bar', legend=False)
     plt.xlabel("Hour of Day")
     plt.ylabel("Observations")
     plt.title("Observations per Minute (Last hour)")
