--- a/index.qmd
+++ b/index.qmd
@@ -6,28 +6,15 @@ execute:
 ```{python}
 import pandas as pd
 from datetime import datetime, timedelta
+import matplotlib.pyplot as plt
+from birdFunctions import *
 
-exclude = ["Dog", "Human non-vocal", "Engine"]
+selectedData = filterData(minLim = 60)
 
-print("These are all the raw observations from the last hour. Updated at %s" %(datetime.now().strftime("%Y-%m-%d %H:%M")))
-
-# --- Load Data ---
-df = pd.read_csv("data/output.csv")
-
-# --- Convert datetime ---
-df['start'] = pd.to_datetime(df['timestamp'])
-
-# --- Filter last hour ---
-one_hour_ago = datetime.now() - timedelta(minutes=60)
-df_last_hour = df[df['start'] >= one_hour_ago]
-
-# --- Filter high confidence ---
-df_last_hour = df_last_hour[df_last_hour['confidence'] > 0.75]
-
-if len(df_last_hour) >0:
-    for _, row in df_last_hour.iloc[::-1].iterrows():
+if len(selectedData) >0:
+    for _, row in selectedData.iloc[::-1].iterrows():
         if row['species'] not in exclude:
-            print(f"{row['start']} — {row['species']} (confidence: {row['confidence']:.2f})")
+            print(f"{row['timestamp']} — {row['species']} (confidence: {row['confidence']:.2f})")
 else:
     print("No observations in the last hour")
 ```
