--- a/day_summary.qmd
+++ b/day_summary.qmd
@@ -19,13 +19,15 @@ if len(result) > 0:
     for _, row in result.iterrows():
         print(f"{row['species']} — {row['count']}")
 
-    stats = groupByHour(selectedData)
+    makeHeatmap(selectedData, timeFrame="hour")
 
-    stats.plot(kind='bar', legend=False)
-    plt.xlabel("Hour of Day")
-    plt.ylabel("Observations")
-    plt.title("Observations per Hour (Last day)")
-    plt.show()
+    #stats = groupByHour(selectedData)
+
+    #stats.plot(kind='bar', legend=False)
+    #plt.xlabel("Hour of Day")
+    #plt.ylabel("Observations")
+    #plt.title("Observations per Hour (Last day)")
+    #plt.show()
 
 else:
     print("No observations in the last day")
